<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="index"
            type="Integer" />

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!--    Since the TextViews do not follow a vertical or horizontal,
            it makes more sense to use ConstraintLayout than Linearlayout-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/shoe_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@{shoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/company_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/company_text_view"
            app:layout_constraintTop_toBottomOf="@id/no_text_view" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawablePadding="5dp"
            android:text="@string/Company"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_company"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_text_view"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawablePadding="5dp"
            android:text="@string/Shoe_name"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_shoe_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawablePadding="5dp"
            android:text="@string/Description"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_description"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_text_view"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawablePadding="5dp"
            android:text="@string/Shoe_size"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_shoe_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_text_view"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/company_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@{shoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_text_view"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text_view" />

        <TextView
            android:id="@+id/shoe_size_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@{String.valueOf(shoe.size)}"
            app:layout_constraintBottom_toTopOf="@+id/description_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/description_text_view"
            app:layout_constraintTop_toBottomOf="@+id/company_text_view" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@{shoe.description}"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text_view" />

        <TextView
            android:id="@+id/no_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:paddingEnd="4dp"
            android:paddingStart="3dp"
            android:text="@{`#` + index}"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D6D6D6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>